--- a/index.html
+++ b/index.html
@@ -4,25 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOP_atv2_Egrp4</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
+     <h1>Prática 2 - SOP</h1>
+
     <main>
-        <h1>Prática 2 - SOP</h1>
         <p>&#x26c5</p>
         <h2>Atualmente 21° em São Paulo</h2>
         <h2>13°/23°</h2>
+    
+
+        <ul>
+            <div class="box">
+            <li><strong>&#x1f327 Amanhã </strong></li>
+            <p>10°/<b>22°</b></p>
+            </div>
+
+             <div class="box">
+            <li><strong>&#x26c5 Sexta-feira</strong></li>
+            <p>15°/<b>17°</b></p>
+            </div>
+
+             <div class="box">
+            <li><strong>&#9728 Sábado</strong></li>
+            <p>25°/<b>28°</b></p>
+            </div>
+        </ul>
+
+        <button>Trocar Cidade</button>
     </main>
-
-    <ul>
-        <li><strong>&#x1f327 Amanhã </strong></li>
-        <p>10°/<b>22°</b></p>
-        <li><strong>&#x26c5 Sexta-feira</strong></li>
-        <p>15°/<b>17°</b></p>
-        <li><strong>&#9728 Sábado</strong></li>
-        <p>25°/<b>28°</b></p>
-    </ul>
-
-    <button>Trocar Cidade</button>
 
 
 </body>
